--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
   </div>
 
   <!-- Bannière -->
-  <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.4) 50%), url('images/banner.jpg');">
+  <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.4) 50%), url('images/bannière.jpg');">
     <div class="banner-content">
-      <h1>Le titre du projet</h1>
-      <p>La phrase d'accroche</p>
-      <img src="images/logo.png" alt="logo" class="logo-big">
+      <h1>Stat'Investigation</h1>
+      <p> Le Décryptage des médias français</p>
+      <img src="images/LOGOpng.png" alt="logo" class="logo-big">
     </div>
   </div>
 
@@ -44,35 +44,39 @@
     <div class="container">
       <h3>Le concept</h3>
       <i class="fas fa-rocket mb-5"></i>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem id fugit adipisci eos quidem laudantium quos et magni nostrum excepturi cupiditate vel minus fugiat, sequi tempora quam, voluptatem consectetur reprehenderit!</p>
+      <p>Affinez votre opinion sur le paysage des medias français. En quelques clics, un lecteur peut comparer le niveau des traitements de l'information. </p>
       <div class="row">
+
         <div class="col-lg-4">
           <div class="frame">
             <h4 class="mt-3">
-              Le public concerné
+             Le lecteur et le citoyen français
             </h4>
             <i class="fas fa-users mb-3"></i>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam vero sequi, voluptas veritatis, earum rem nesciunt atque deleniti esse quaerat .</p>
           </div>
         </div>
+
         <div class="col-lg-4">
           <div class="frame">
             <h4 class="mt-3">
               La problématique
             </h4>
             <i class="far fa-question-circle mb-3"></i>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus amet laboriosam delectus odit accusantium id ab illo facere. Quibusdam iure praesentium fuga illo voluptate est. Doloremque possimus sint quidem id.</p>
-          </div>
+            <p>Les différents medias de la sphère médiatique française traitent-t-ils l'actualité uniformément ?</p>
+          </>
         </div>
+
         <div class="col-lg-4">
           <div class="frame">
             <h4 class="mt-3">
               La solution
             </h4>
             <i class="far fa-lightbulb mb-3"></i>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga reiciendis dolorum quis quae vitae repellendus dolorem at perferendis possimus earum dolore recusandae, similique a praesentium magni! Minima sunt fuga amet.</p>
+            <p>Afin de répondre à cette question, nous analysons pour vous les contenus des medias français ?</p>
           </div>
         </div>
+
       </div>
     </div>
   </div>
@@ -100,20 +104,20 @@
 
   <div class="wrapper" id="team">
     <div class="wrapper-circle right">
-      <img src="images/code.jpg" class="circle right" alt="code">
+      <img src="images/LOGOpng.png" class="circle right" alt="code">
     </div>
     <div class="container">
       <h3>L'équipe</h3>
       <i class="fas fa-users mb-5"></i>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem id fugit adipisci eos quidem laudantium quos et magni nostrum excepturi cupiditate vel minus fugiat, sequi tempora quam, voluptatem consectetur reprehenderit!</p>
+      <p>Nous sommes cinq étudiantes de l'EFJ Paris. </p>
       <div class="row">
 
 
         <div class="col-lg-3">
           <div class="card">
-            <img src="images/team1.jpg" class="card-img-top" alt="name1">
+            <img src="images/Jenna Barabinot.jpg" class="card-img-top" alt="name1">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Jenna Barabinot.</p>
             </div>
           </div>
         </div>
@@ -121,19 +125,28 @@
 
         <div class="col-lg-3">
           <div class="card">
-            <img src="images/team2.jpg" class="card-img-top" alt="name2">
+            <img src="images/Manon Seguin.jpg" class="card-img-top" alt="name2">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Manon Seguin, le leader de l'équipe.</p>
             </div>
           </div>
         </div>
 
 
+         <div class="col-lg-3">
+          <div class="card">
+            <img src="images/Lea Demars.jpg" class="card-img-top" alt="name3">
+            <div class="card-body">
+              <p class="card-text">Lea Demars.</p>
+            </div>
+          </div>
+        </div>
+
         <div class="col-lg-3">
           <div class="card">
-            <img src="images/team3.jpg" class="card-img-top" alt="name3">
+            <img src="images/Pauline Clément.jpg" class="card-img-top" alt="name3">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Pauline Clément.</p>
             </div>
           </div>
         </div>
@@ -142,9 +155,9 @@
         <!-- Supprimer( ou copier-coller) ces lignes code pour supprimer (ou ajouter) un membre à la team -->
         <div class="col-lg-3">
           <div class="card">
-            <img src="images/team4.jpg" class="card-img-top" alt="name4">
+            <img src="images/Imane.jpg" class="card-img-top" alt="name4">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Imane.</p>
             </div>
           </div>
         </div>
@@ -172,4 +185,5 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
